[package]
name = "rexl_collection"
version = "0.0.2"
authors = ["tuke <bobby.j.strange@gmail.com>"]
edition = "2018"
description = """
A simple collection library for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/rexl-collection/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl/tree/master/rexl-collection"
repository = "https://github.com/bobbystrange/rexl/tree/master/rexl-collection"
license = "Apache-2.0"
keywords = ["collection", "b-tree"]
categories = ["data-structures"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.3", default-features = false }