[package]
name = "rexl_collection"
version = "0.0.5"
authors = ["tuke <jrriwll@gmail.com>"]
edition = "2021"
description = """
Collection Framework for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/rexl-collection/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl/tree/master/rexl-collection"
repository = "https://github.com/bobbystrange/rexl/tree/master/rexl-collection"
license = "Apache-2.0"
keywords = ["collection", "tree", "btree"]
categories = ["data-structures"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.5", default-features = false }