[package]
name = "rexl_macros"
description = "procedural macros for the rexl crate"
readme = "README.md"

version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
homepage.workspace = true
include.workspace = true

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
syn = "2.0"
quote = "1.0"

[dev-dependencies]
rexl = { workspace = true, default-features = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1"
regex = "1"
