[package]
name = "rexl_math"
version = "0.0.2"
authors = ["tuke <tukeof@gmail.com>"]
edition = "2018"
description = """
A simple mathematics library for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl"
repository = "https://github.com/bobbystrange/rexl"
license = "GPL-2.0-or-later"
keywords = ["math"]
categories = ["mathematics", "algorithms"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.3", default-features = false }