[package]
name = "rexl_math"
version = "0.0.2"
authors = ["tuke <tukeof@gmail.com>"]
edition = "2018"
description = """
A simple mathematics library for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/rexl-math/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl/tree/master/rexl-math"
repository = "https://github.com/bobbystrange/rexl/tree/master/rexl-math"
license = "MIT OR Apache-2.0"
keywords = ["math"]
categories = ["mathematics", "algorithms"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.3", default-features = false }