[package]
name = "rexl_matrix"
version = "0.0.2"
authors = ["tuke <tukeof@gmail.com>"]
edition = "2018"
description = """
A simple matrix library for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/rexl-matrix/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl/tree/master/rexl-matrix"
repository = "https://github.com/bobbystrange/rexl/tree/master/rexl-matrix"
license = "MIT OR Apache-2.0"
keywords = ["matrix"]
categories = ["mathematics", "algorithms"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.3", default-features = false }

[dev-dependencies]
matrix = "0.22.0"