[package]
name = "rexl_matrix"
version = "0.0.3"
authors = ["tuke <jrriwll@gmail.com>"]
edition = "2021"
description = """
Matrix Library for Rust
"""
documentation = "https://github.com/bobbystrange/rexl/blob/master/rexl-matrix/README.md"
readme = "README.md"
homepage = "https://github.com/bobbystrange/rexl/tree/master/rexl-matrix"
repository = "https://github.com/bobbystrange/rexl/tree/master/rexl-matrix"
license = "Apache-2.0"
keywords = ["matrix"]
categories = ["mathematics", "algorithms"]

[dependencies]
rexl = { path = "../rexl", version = "0.0.5", default-features = false }

[dev-dependencies]
matrix = "0.22.0"