[package]
# see https://doc.rust-lang.org/book/
# and https://kaisery.github.io/trpl-zh-cn/
name = "book"
version = "0.1.0"
authors = ["tuke <bobby.j.strange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.8.3"