[package]
name = "rfind"
version = "0.1.0"
authors = ["tuke <bobby.j.strange@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rexl = { path = "../../rexl", version = "0.0.3", default-features = false }
regex = "1"