[package]
name = "rserve"
version = "0.0.1"
authors = ["tuke <jrriwll@gmail.com>"]
edition = "2021"
description = """
A port for serve in nodejs
"""
documentation = "https://github.com/jrrwll/rexl/blob/master/rexl-cli/rserve/README.md"
readme = "README.md"
homepage = "https://github.com/jrrwll/rexl/tree/master/rexl"
repository = "https://github.com/jrrwll/rexl/tree/master/rexl"
license = "Apache-2.0"
keywords = ["serve", "static-files"]
categories = ["command-line-utilities"]

[dependencies]
rexl = { path = "../../rexl", version = "0.0.4", default-features = false }
actix-web = "3"
